--- a/SOS100-MVC/Views/Home/Index.cshtml
+++ b/SOS100-MVC/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="~/css/home.css" asp-append-version="true"/>
 
 <div class="text-center">
-    <h1 class="display-4">Sök efter böcker eller utrustning här!</h1>
+    <h1 class="display-4">Vad söker du idag?</h1>
     <form class="search-form">
         <div id="search-bar">
             <input
