--- a/SOS100-MVC/wwwroot/css/home.css
+++ b/SOS100-MVC/wwwroot/css/home.css
@@ -1,3 +1,6 @@
+.display-4 {
+    margin: 0px;
+}
 .search-form {
     display: flex;
     justify-content: center;
@@ -10,6 +13,8 @@
     justify-content: center;
     align-items: center;
     gap: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 #search-bar input {
     width: 600px;
