--- a/SOS100-MVC/Views/Home/Index.cshtml
+++ b/SOS100-MVC/Views/Home/Index.cshtml
@@ -8,9 +8,12 @@
     <form class="search-form">
         <div id="search-bar">
             <input
-                   type="text"
-                   placeholder="Sök efter böcker eller utrustning..."/>
+                type="text"
+                placeholder="Sök efter böcker eller utrustning..."/>
             <button type="submit">Sök</button>
         </div>
     </form>
+    <a class="btn btn-primary btn-lg mt-4" asp-controller="Home" asp-action="Catalog">
+        Visa katalogen
+    </a>
 </div>
