--- a/SOS100-MVC/Views/Shared/_Layout.cshtml
+++ b/SOS100-MVC/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Utrustning</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="MyPages" asp-action="Index">Mina sidor</a>
+                    </li>
                 </ul>
             </div>
         </div>
