Admin page visible for admin

--- a/SOS100-MVC/Views/Shared/_Layout.cshtml
+++ b/SOS100-MVC/Views/Shared/_Layout.cshtml
@@ -29,6 +29,12 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="MyPages" asp-action="Index">Mina sidor</a>
                     </li>
+                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Index">Admin</a>
+                        </li>
+                    }
                 </ul>
             </div>
         </div>
