Lade till Controller och städade upp

--- a/SOS100-MVC/Views/Home/Index.cshtml
+++ b/SOS100-MVC/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
             <button type="submit">Sök</button>
         </div>
     </form>
-    <a class="btn btn-primary btn-lg mt-4" asp-controller="Home" asp-action="Catalog">
-        Visa katalogen
+    <a class="btn btn-primary btn-lg mt-4" asp-controller="Catalog" asp-action="Index">
+        Katalog
     </a>
 </div>
