Admin can create, update and delete users

--- a/SOS100-MVC/Views/Admin/Index.cshtml
+++ b/SOS100-MVC/Views/Admin/Index.cshtml
@@ -1,4 +1,7 @@
 <h1>Admin page</h1>
 <p>It is a secret to everybody.</p>
+<a asp-controller="Admin"
+   asp-action="Users"
+   class="btn btn-primary">Hantera användare</a>
 <a asp-action="SignOutUser">Log out</a>
 
